# pongers

./: Cargo.toml  build.rs
.cargo/: config.toml
res/: paddle.mtl
shaders/: debug_shader.wgsl  fragment.wgsl
src/: ball.rs  ball_shader.wgsl  camera.rs  debug.rs  debug_shader.wgsl  fragment.wgsl  game_state.rs  instance.rs  lib.rs  main.rs  mesh.rs  paddle.rs  paddle_shader.wgsl  shader.wgsl  state.rs  vertex.wgsl
