[package]
name = "pongers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17"
winit = "0.28"
bytemuck = { version = "1", features = ["derive"] }

smol = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

glam = { version = "0.24", features = ["bytemuck"] }
